[gd_scene load_steps=4 format=3 uid="uid://b0a3wp125r7m"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_yk0ux"]
[ext_resource type="Texture2D" uid="uid://xlpunelwhaha" path="res://assets/Alien - 1.png" id="2_bqjv1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uur23"]
size = Vector2(137, 130.5)

[node name="enemy" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_yk0ux")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5, -3.5)
scale = Vector2(0.974227, 0.981959)
texture = ExtResource("2_bqjv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 1.75)
shape = SubResource("RectangleShape2D_uur23")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 96)
rotation = 3.14159

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
